--- a/aeson-toolkit.cabal
+++ b/aeson-toolkit.cabal
@@ -5,8 +5,15 @@ license-file:     LICENSE
 copyright:        (c) 2013 Simon Hengel
 author:           Simon Hengel <sol@typeful.net>
 maintainer:       Simon Hengel <sol@typeful.net>
+synopsis:         A generalization of Aeson over Failure
+description:      A generalization of Aeson over Failure
+category:         Text, Web, JSON
 build-type:       Simple
 cabal-version:    >= 1.8
+
+source-repository head
+  type: git
+  location: https://github.com/sol/aeson-toolkit
 
 library
   ghc-options:
